--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/DermoDazzle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <title>Admin Panel</title>
   </head>
   <body>
